[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi"] }
reqwest = { version = "0.11", features = ["blocking"] }
aes = "0.7"
block-modes = "0.8"
hex = "0.4"